rename templates and lambda function

--- a/ci/config.yml
+++ b/ci/config.yml
@@ -19,7 +19,7 @@ global:
     - us-west-2
 tests:
   quickstart-3-AZ:
-    template_file:  cassandra-master.template
+    template_file:  db-master.template
     parameter_input: master.json
     regions:
       - ap-southeast-2
@@ -28,7 +28,7 @@ tests:
       - us-east-2
       - us-west-2
   quickstart-2-AZ:
-    template_file:  cassandra-master.template
+    template_file:  db-master.template
     parameter_input: master-2AZ.json
     regions:
       - ap-northeast-1
