--- a/templates/db-master.template
+++ b/templates/db-master.template
@@ -462,14 +462,14 @@
       "Default": "jmxpassword",
       "NoEcho": "true",
       "MaxLength": "255",
-      "Description": "Enter your Apache Cassandra JMX Remote Password",
+      "Description": "Enter your Apache Cassandra JMX Remote Password, default: jmxpassword",
       "ConstraintDescription": "Input your Apache Cassandra JMX Remote Password"
     },
 
     "FireCampRelease": {
       "Type": "String",
-      "Default": "0.9.3",
-      "AllowedValues": [ "0.9.3", "0.9.2" ],
+      "Default": "0.9.4",
+      "AllowedValues": [ "0.9.4", "0.9.3" ],
       "Description": "The FireCamp release version. For the detail release notes, please refer to https://github.com/cloudstax/firecamp/releases."
     },
     "QSS3BucketName": {
