Update default QSS3Bucket vaule to point to aws-quickstart

--- a/ci/config-allazs.yml
+++ b/ci/config-allazs.yml
@@ -1,5 +1,5 @@
 global:
-  qsname: quickstart-cloudstax-nosql
+  qsname: quickstart-cloudstax-cassandra
   owner: quickstart-eng@amazon.com
   reporting: true
   govcloud: false
@@ -19,7 +19,7 @@ global:
     - us-west-1
     - us-west-2
 tests:
-  cloudstax-nosql:
+  quickstart-3-AZ:
     template_file:  db-master.template
     parameter_input: master.json
     regions:
@@ -28,3 +28,14 @@ tests:
       - us-east-1
       - us-east-2
       - us-west-2
+  quickstart-2-AZ:
+    template_file:  db-master.template
+    parameter_input: master-2AZ.json
+    regions:
+      - ap-northeast-1
+      - ap-northeast-2
+      - ap-southeast-1
+      - ca-central-1
+      - eu-central-1
+      - eu-west-2
+      - us-west-1
