remove the end comma

--- a/templates/db-lambda.template
+++ b/templates/db-lambda.template
@@ -8,7 +8,7 @@
         },
         "SubnetIDs": {
             "Type": "List<AWS::EC2::Subnet::Id>",
-            "Description": "The existing subnet to run Lambda function. This should be the subnet in the VPC where the Cassandra nodes are deployed.",
+            "Description": "The existing subnet to run Lambda function. This should be the subnet in the VPC where the Cassandra nodes are deployed."
         },
         "QSS3BucketName": {
             "AllowedPattern": "^[0-9a-zA-Z]+([0-9a-zA-Z-]*[0-9a-zA-Z])*$",
