refine parameter descriptions

--- a/templates/db-master.template
+++ b/templates/db-master.template
@@ -157,7 +157,7 @@
                     "default": "Apache Cassandra JVM Heap Size MB"
                 },
                 "VolumeType": {
-                    "default": "Data Volume Type"
+                    "default": "Cassandra Data Volume Type"
                 },
                 "Iops": {
                     "default": "Data Volume Iops"
@@ -166,10 +166,10 @@
                     "default": "Data Volume Size GB"
                 },
                 "EncryptVolume": {
-                    "default": "Whether encrypts Data Volume"
+                    "default": "Encrypt Data Volume"
                 },
                 "JournalVolumeType": {
-                    "default": "Journal Volume Type"
+                    "default": "Cassandra Journal Volume Type"
                 },
                 "JournalIops": {
                     "default": "Journal Volume Iops"
@@ -178,7 +178,7 @@
                     "default": "Journal Volume Size GB"
                 },
                 "EncryptJournalVolume": {
-                    "default": "Whether encrypts Journal Volume"
+                    "default": "Encrypt Journal Volume"
                 },
                 "JmxRemoteUser": {
                     "default": "JMX Remote User"
@@ -418,7 +418,7 @@
                 "io1",
                 "st1"
             ],
-            "Description": "The Data volume type"
+            "Description": "The Cassandra Data volume type"
         },
         "Iops": {
             "Type": "Number",
@@ -437,7 +437,7 @@
                 "false",
                 "true"
             ],
-            "Description": "Whether encrypts the Data volume"
+            "Description": "Encrypt the Data volume"
         },
         "JournalVolumeType": {
             "Type": "String",
@@ -447,7 +447,7 @@
                 "io1",
                 "st1"
             ],
-            "Description": "The Journal volume type"
+            "Description": "The Cassandra Journal volume type"
         },
         "JournalIops": {
             "Type": "Number",
@@ -466,7 +466,7 @@
                 "false",
                 "true"
             ],
-            "Description": "Whether encrypts the Journal volume"
+            "Description": "Encrypt the Journal volume"
         },
         "JmxRemoteUser": {
             "Type": "String",
