--- a/templates/db-lambda.template
+++ b/templates/db-lambda.template
@@ -225,7 +225,7 @@
                         "Outputs.LambdaExecutionRoleArn"
                     ]
                 },
-                "Timeout" : "300",
+                "Timeout" : 300,
                 "Handler" : "setup.lambda_handler",
                 "VpcConfig": {
                     "SecurityGroupIds": [
@@ -241,7 +241,6 @@
         },
         "LambdaFunctionLogGroup": {
             "Type": "AWS::Logs::LogGroup",
-            "DependsOn": "LambdaFunction",
             "DeletionPolicy": "Retain",
             "Properties": {
                 "LogGroupName": {
